tests/ui/fn_ptr_reference_encode.stderr
error: implementation of `Encode` is not general enough
  --> ui/fn_ptr_reference_encode.rs:20:5
   |
20 |     e(my_fn as extern "C" fn(&i32));
   |     ^ implementation of `Encode` is not general enough
   |
   = note: `Encode` would have to be implemented for the type `for<'r> extern "C" fn(&'r i32)`
   = note: ...but `Encode` is actually implemented for the type `extern "C" fn(&'0 i32)`, for some specific lifetime `'0`
